resolves #160 add a link allowing the user to provide a custom answer to a sentence
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/bot/admin/web/src/app/bot/intent/create-bot-intent.component.html
+++ b/bot/admin/web/src/app/bot/intent/create-bot-intent.component.html
@@ -16,7 +16,7 @@
 
 <md-card class="sentence">
   <md-card-content>
-    <tock-select-bot [(configurationId)]="botConfigurationId">
+    <tock-select-bot [(configurationId)]="botConfigurationId" [displayConnectorChoice]="false">
       <br>
       <md-form-field class="sentence-input" #newSentenceContainer>
         <input mdInput
