--- a/bot/admin/web/src/app/bot/i18n/i18n-label.component.html
+++ b/bot/admin/web/src/app/bot/i18n/i18n-label.component.html
@@ -17,7 +17,7 @@
 <md-list-item *ngIf="i.i18n.length !== 0">
   <h4 md-line>
     <span class="defaultLabel" md-tooltip="id: {{i._id}}">{{i.defaultLocalizedLabel().label}}</span>
-    <button md-button (click)="deleteLabel(i)" md-tooltip="Delete Label" color="warn">
+    <button *ngIf="deleteAllowed" md-button (click)="deleteLabel(i)" md-tooltip="Delete Label" color="warn">
       <md-icon>delete_forever</md-icon>
     </button>
   </h4>
