--- a/nlp/admin/web/src/app/search/search.component.html
+++ b/nlp/admin/web/src/app/search/search.component.html
@@ -55,6 +55,28 @@
         <md-datepicker #after (selectedChanged)="search()"></md-datepicker>
         <button md-button (click)="search()">GO</button>
         </md-card-content>
+       <md-card-footer>
+         <md-expansion-panel>
+           <md-expansion-panel-header>
+             <mat-panel-title>
+               Advanced Options
+             </mat-panel-title>
+             <mat-panel-description>
+               Manage Intent and Entities
+             </mat-panel-description>
+           </md-expansion-panel-header>
+           Update selected sentences with:
+
+           <md-select placeholder="New Intent" [(ngModel)]="update.newIntentId">
+             <md-option *ngFor="let intent of state.currentIntents | async" [value]="intent._id">
+               {{intent.name}}
+             </md-option>
+             <md-option value="unknown">Unknown</md-option>
+           </md-select>
+
+           <button md-button (click)="updateSentences()">UPDATE</button>
+         </md-expansion-panel>
+       </md-card-footer>
     </md-card>
   </tock-sentences-scroll>
 </div>
