nlp admin: enable only ascii letters for new intent/entity
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/nlp/admin/web/src/app/sentence-analysis/create-entity-dialog/create-entity-dialog.component.html
+++ b/nlp/admin/web/src/app/sentence-analysis/create-entity-dialog/create-entity-dialog.component.html
@@ -35,7 +35,7 @@
     Or create :
 
     <md-input-container>
-      <input mdInput placeholder="Entity Type" [(ngModel)]="type" (keydown)="onTypeKeyDown($event)" (change)="onTypeChange()">
+      <input mdInput placeholder="Entity Type" [(ngModel)]="type" (keyup)="onTypeKeyUp($event)">
     </md-input-container>
   </p>
 
@@ -43,7 +43,7 @@
     With role :
 
     <md-input-container>
-      <input mdInput placeholder="Role" [(ngModel)]="role" (keydown)="onRoleKeyDown($event)">
+      <input mdInput placeholder="Role" [(ngModel)]="role" (keyup)="onRoleKeyUp($event)">
     </md-input-container>
   </p>
 
