resolves #172 add the ability to add scripted story handlers in the admin interface
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/bot/admin/web/src/app/bot/intent/create-bot-intent.component.css
+++ b/bot/admin/web/src/app/bot/intent/create-bot-intent.component.css
@@ -34,3 +34,12 @@
   font-size: small;
   width:60%;
 }
+
+.text-area-container {
+  min-width:800px;
+}
+
+.text-area {
+  padding:5px 5px 5px 5px;
+  border: inset;
+}
