--- a/bot/admin/web/src/app/bot/intent/search-bot-intent.component.css
+++ b/bot/admin/web/src/app/bot/intent/search-bot-intent.component.css
@@ -16,3 +16,12 @@
   font-size: xx-large;
 }
 
+.text-area-container {
+  min-width:800px;
+}
+
+.text-area {
+  padding:5px 5px 5px 5px;
+  border: inset;
+}
+
