--- a/nlp/admin/web/src/app/applications/applications/applications.component.html
+++ b/nlp/admin/web/src/app/applications/applications/applications.component.html
@@ -14,33 +14,40 @@
   ~ limitations under the License.
   -->
 
-<md-card>
+<md-card class="applications-applications">
   <md-card-title>
     <span *ngIf="state.applications.length === 0">Welcome! Please create your first NLP Application</span>
     <span *ngIf="state.applications.length !== 0">NLP Applications</span>
   </md-card-title>
-  <md-card-content>
-      <md-list>
-        <md-list-item *ngFor="let app of state.applications">
-          <button *ngIf="app._id === state.currentApplication._id" mdTooltip="Current" class="select-action" md-mini-fab><md-icon color="primary">label</md-icon></button>
-          <button *ngIf="app._id !== state.currentApplication._id" class="select-action" mdTooltip="Select"
-                  (click)="selectApplication(app)" md-mini-fab><md-icon>label_outline</md-icon></button>
-          <span class="tock-name">{{app.name}}</span>
-          <md-chip-list class="locales">
-            <md-chip *ngFor="let locale of app.supportedLocales" disabled="true" selected="true">
-                {{state.localeName(locale)}}
-            </md-chip>
-          </md-chip-list>
-          <span class="action-spacing"></span>
-          <button routerLink="edit/{{app._id}}" md-mini-fab mdTooltip="Edit"><md-icon>edit</md-icon></button>
-          <span class="action-spacing"></span>
-          <button *ngIf="state.hasRole(UserRole.technicalAdmin)" (click)="downloadDump(app)" md-icon-button mdTooltip="Download an application dump"><md-icon>file_download</md-icon></button>
-          <button (click)="downloadSentencesDump(app)" md-icon-button mdTooltip="Download a sentences dump"><md-icon>cloud_download</md-icon></button>
 
-        </md-list-item>
-      </md-list>
-    <p></p>
+  <md-card-content>
+    <div class="applications-applications__item" *ngFor="let app of state.applications">
+      <button *ngIf="app._id === state.currentApplication._id" mdTooltip="Current" md-button class="applications-applications__select-action">
+        <md-icon>done</md-icon>
+      </button>
+
+      <button *ngIf="app._id !== state.currentApplication._id" class="applications-applications__select-action" md-button mdTooltip="Select"
+              (click)="selectApplication(app)">
+        <md-icon></md-icon>
+      </button>
+
+      <span class="applications-applications__app-name">{{app.name}}</span>
+
+      <div class="applications-applications__datas">
+        <span *ngFor="let locale of app.supportedLocales">
+            {{state.localeName(locale)}}
+        </span>
+      </div>
+
+      <div class="applications-applications__complex-actions">
+        <button (click)="downloadDump(app)" md-button>Download an application dump</button>
+        <button (click)="downloadSentencesDump(app)" md-button>Download a sentences dump</button>
+      </div>
+
+      <button routerLink="edit/{{app._id}}" md-icon-button mdTooltip="Edit"><md-icon>edit</md-icon></button>
+    </div>
   </md-card-content>
+
   <md-card-actions *ngIf="!uploadDump">
     <button (click)="showUploadDumpPanel()" md-button>
       Upload Dump
