--- a/nlp/admin/web/src/app/intents/add-state/add-state-dialog.component.html
+++ b/nlp/admin/web/src/app/intents/add-state/add-state-dialog.component.html
@@ -18,7 +18,10 @@
 <div md-dialog-content>
   <p>
     If at least one mandatory state is set for an intent,
-    only parse query with at least one mandatory state of the intent are able to returns this intent.
+    <br>
+    only query with at least one mandatory state of the intent
+    <br>
+    is able to returns this intent.
   </p>
   <form #stateForm="ngForm">
     <md-input-container>
